# ketanji

./: .gitignore  README.md  pyproject.toml
src/: main.py  server.py
src/core/: config.py  plugins.py  utils.py
src/plugins/: ai.py  deepseek.py
